# fractal-flyer

./: CMakeLists.txt
common/: march.h  object.h
res/: shader.glsl
scripts/: preprocess_shaders.py
src/: main.cpp  player.cpp  player.hpp  state.cpp  state.hpp  utility.cpp  utility.hpp
